<?xml version="1.0"?>
<package format="2">
  <name>agv_navigation</name>
  <version>0.0.0</version>
  <description>The agv_navigation package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="harun@todo.todo">harun</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>costmap_2d</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>gmapping</build_depend>
  <build_depend>hector_mapping</build_depend>
  <build_depend>laser_scan_matcher</build_depend>
  <build_depend>razor_imu_9dof</build_depend>
  <build_depend>robot_pose_ekf</build_depend>
  <build_depend>rosbag</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rostopic</build_depend>
  <build_depend>rviz</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>urg_node</build_depend>
  <build_depend>message_generation</build_depend>
  <build_export_depend>costmap_2d</build_export_depend>
  <build_export_depend>dynamic_reconfigure</build_export_depend>
  <build_export_depend>gmapping</build_export_depend>
  <build_export_depend>hector_mapping</build_export_depend>
  <build_export_depend>laser_scan_matcher</build_export_depend>
  <build_export_depend>razor_imu_9dof</build_export_depend>
  <build_export_depend>robot_pose_ekf</build_export_depend>
  <build_export_depend>rosbag</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rostopic</build_export_depend>
  <build_export_depend>rviz</build_export_depend>
  <build_export_depend>tf</build_export_depend>
  <build_export_depend>tf2_ros</build_export_depend>
  <build_export_depend>urg_node</build_export_depend>
  <exec_depend>costmap_2d</exec_depend>
  <exec_depend>dynamic_reconfigure</exec_depend>
  <exec_depend>gmapping</exec_depend>
  <exec_depend>hector_mapping</exec_depend>
  <exec_depend>laser_scan_matcher</exec_depend>
  <exec_depend>razor_imu_9dof</exec_depend>
  <exec_depend>robot_pose_ekf</exec_depend>
  <exec_depend>rosbag</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rostopic</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>urg_node</exec_depend>
  <exec_depend>message_runtime</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
    <costmap_2d plugin="${prefix}/costmap_plugins.xml" />
  </export>
</package>
